--- a/translation/de/sabbamitta/sutta/an/an5/an5.287-292_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.287-292_translation-de-sabbamitta.json
@@ -8,6 +8,6 @@
   "an5.287-292:1.4": "Eine Laienfrau, die diese fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.287-292:2.1": "Eine Nonne … eine Nonne in Schulung … ein Novize … eine Novizin … ein Laienmann … eine Laienfrau, die fünf Eigenschaften besitzt, wird in den Himmel erhoben. ",
   "an5.287-292:2.2": "Welche fünf? ",
-  "an5.287-292:2.3": "Sie tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. ",
+  "an5.287-292:2.3": "Sie tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt nicht die Rauschmittel Bier, Wein und Branntwein. ",
   "an5.287-292:2.4": "Eine Laienfrau, die diese fünf Eigenschaften besitzt, wird in den Himmel erhoben.“ "
 }
