--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -142,7 +142,7 @@
   "an3.70:22.1": "Solange sie leben, geben die Vollendeten das Lügen auf und lügen nicht mehr. Sie sagen die Wahrheit und halten sich an die Wahrheit. Sie sind ehrlich und verlässlich und legen die Welt nicht mit ihren Worten herein. ",
   "an3.70:22.2": "Auch ich will für diesen Tag und diese Nacht das Lügen aufgeben und nicht lügen. Ich will die Wahrheit sagen und mich an die Wahrheit halten. Ich will ehrlich und verlässlich sein und will die Welt nicht mit meinen Worten hereinlegen. ",
   "an3.70:22.3": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten. ",
-  "an3.70:23.1": "Solange sie leben, geben die Vollendeten das Trinken von Bier, Wein und berauschendem Branntwein auf und trinken diese Dinge nicht mehr. ",
+  "an3.70:23.1": "Solange sie leben, geben die Vollendeten das Trinken von Rauschmitteln wie Bier, Wein und Branntwein auf und trinken diese Dinge nicht mehr. ",
   "an3.70:23.2": "Auch ich will für diesen Tag und diese Nacht das Trinken von Bier, Wein und berauschendem Branntwein aufgeben und diese Dinge nicht trinken. ",
   "an3.70:23.3": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten. ",
   "an3.70:24.1": "Solange sie leben, essen die Vollendeten zu einer Tageszeit und verzichten auf das Essen bei Nacht und zur falschen Zeit. ",
