--- a/translation/de/sabbamitta/sutta/an/an4/an4.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.61_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "an4.61:7.3": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
   "an4.61:7.4": "Das nennt man die Vervollkommnung des Vertrauens. ",
   "an4.61:8.1": "Und was ist die Vervollkommnung des sittlichen Verhaltens? ",
-  "an4.61:8.2": "Da tötet ein edler Schüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt kein Bier, keinen Wein oder berauschenden Branntwein. ",
+  "an4.61:8.2": "Da tötet ein edler Schüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an4.61:8.3": "Das nennt man die Vervollkommnung des sittlichen Verhaltens. ",
   "an4.61:9.1": "Und was ist die Vervollkommnung der Großzügigkeit? ",
   "an4.61:9.2": "Da lebt ein edler Schüler zu Hause und hat den Fleck des Geizes entfernt; er gibt großzügig her, hat eine offene Hand, freut sich am Loslassen, ist der Wohltätigkeit verpflichtet und liebt es, zu geben und zu teilen. ",
