--- a/translation/de/sabbamitta/sutta/an/an4/an4.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.99_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "an4.99:1.5": "jemand übt weder zum eigenen Nutzen noch zum Nutzen anderer, ",
   "an4.99:1.6": "und jemand übt sowohl zum eigenen Nutzen als auch zum Nutzen anderer. ",
   "an4.99:2.1": "Und wie übt ein Mensch zum eigenen Nutzen, aber nicht zum Nutzen anderer? ",
-  "an4.99:2.2": "Da tötet ein Mensch selbst keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt kein Bier, keinen Wein oder berauschenden Branntwein. Doch er ermuntert andere nicht, das Gleiche zu tun. ",
+  "an4.99:2.2": "Da tötet ein Mensch selbst keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. Doch er ermuntert andere nicht, das Gleiche zu tun. ",
   "an4.99:2.3": " ",
   "an4.99:2.4": " ",
   "an4.99:2.5": " ",
