--- a/translation/de/sabbamitta/sutta/an/an4/an4.235_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.235_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an4.235:1.8": "Da tötet jemand lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Rauschmittel wie Bier, Wein und Branntwein. ",
   "an4.235:1.9": "Das nennt man dunkle Taten mit dunklem Ergebnis. ",
   "an4.235:2.1": "Und was sind helle Taten mit hellem Ergebnis? ",
-  "an4.235:2.2": "Da tötet jemand keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt kein Bier, keinen Wein oder berauschenden Branntwein. ",
+  "an4.235:2.2": "Da tötet jemand keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an4.235:2.3": "Das nennt man helle Taten mit hellem Ergebnis. ",
   "an4.235:3.1": "Und was sind dunkle und helle Taten mit dunklem und hellem Ergebnis? ",
   "an4.235:3.2": "Da bildet jemand sowohl einen verletzenden als auch einen freundlichen Willen mit dem Körper, der Sprache und dem Geist. Das nennt man dunkle und helle Taten mit dunklem und hellem Ergebnis. ",
