--- a/translation/de/sabbamitta/sutta/an/an4/an4.201_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.201_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "an4.201:3.6": " ",
   "an4.201:3.7": "Das nennt man einen noch weniger wahren Menschen. ",
   "an4.201:4.1": "Und was ist ein wahrer Mensch? ",
-  "an4.201:4.2": "Da tötet jemand keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt kein Bier, keinen Wein oder berauschenden Branntwein. ",
+  "an4.201:4.2": "Da tötet jemand keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an4.201:4.3": "Das nennt man einen wahren Menschen. ",
   "an4.201:5.1": "Und was ist ein noch wahrerer Mensch? ",
   "an4.201:5.2": "Da tötet jemand keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt kein Bier, keinen Wein oder berauschenden Branntwein. Und er ermuntert andere, das Gleiche zu tun. ",
