--- a/translation/de/sabbamitta/sutta/an/an5/an5.145_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.145_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an5.145:0.3": "Die Hölle ",
   "an5.145:1.1": "„Mönche und Nonnen, jemand, der fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.145:1.2": "Welche fünf? ",
-  "an5.145:1.3": "Er tötet lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Bier, Wein und berauschenden Branntwein. ",
+  "an5.145:1.3": "Er tötet lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Rauschmittel wie Bier, Wein und Branntwein. ",
   "an5.145:1.4": "Jemand, der diese fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.145:2.1": "Jemand, der fünf Eigenschaften besitzt, wird in den Himmel erhoben. ",
   "an5.145:2.2": "Welche fünf? ",
