--- a/translation/de/sabbamitta/sutta/an/an5/an5.173_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.173_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an5.173:0.3": "Die Hölle ",
   "an5.173:1.1": "„Mönche und Nonnen, ein Laienschüler, der fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.173:1.2": "Welche fünf? ",
-  "an5.173:1.3": "Er tötet lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Bier, Wein und berauschenden Branntwein. ",
+  "an5.173:1.3": "Er tötet lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Rauschmittel wie Bier, Wein und Branntwein. ",
   "an5.173:1.4": "Ein Laienschüler, der diese fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.173:2.1": "Ein Laienschüler, der fünf Eigenschaften besitzt, wird in den Himmel erhoben. ",
   "an5.173:2.2": "Welche fünf? ",
