--- a/translation/de/sabbamitta/sutta/an/an5/an5.286_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.286_translation-de-sabbamitta.json
@@ -8,6 +8,6 @@
   "an5.286:1.4": "Ein Mönch, der diese fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.286:2.1": "Ein Mönch, der fünf Eigenschaften besitzt, wird in den Himmel erhoben. ",
   "an5.286:2.2": "Welche fünf? ",
-  "an5.286:2.3": "Er tötet keine lebenden Geschöpfe, stiehlt nicht, hat keinen Geschlechtsverkehr, lügt nicht und trinkt kein Bier, keinen Wein oder berauschenden Branntwein. ",
+  "an5.286:2.3": "Er tötet keine lebenden Geschöpfe, stiehlt nicht, hat keinen Geschlechtsverkehr, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an5.286:2.4": "Ein Mönch, der diese fünf Eigenschaften besitzt, wird in den Himmel erhoben.“ "
 }
