--- a/translation/de/sabbamitta/sutta/an/an5/an5.171_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.171_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an5.171:1.6": "Der Buddha sagte: ",
   "an5.171:2.1": "„Ein Laienschüler, der fünf Eigenschaften besitzt, wird von Unsicherheit überwältigt. ",
   "an5.171:2.2": "Welche fünf? ",
-  "an5.171:2.3": "Er tötet lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Alkohol, der nachlässig macht. ",
+  "an5.171:2.3": "Er tötet lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Rauschmittel wie Bier, Wein und Branntwein. ",
   "an5.171:2.4": "Ein Laienschüler, der diese fünf Eigenschaften besitzt, wird von Unsicherheit überwältigt. ",
   "an5.171:3.1": "Ein Laienschüler, der fünf Eigenschaften besitzt, ist selbstbewusst. ",
   "an5.171:3.2": "Welche fünf? ",
