--- a/translation/de/sabbamitta/sutta/an/an5/an5.293_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.293_translation-de-sabbamitta.json
@@ -4,6 +4,6 @@
   "an5.293:0.3": "Ein Ājīvaka ",
   "an5.293:1.1": "„Mönche und Nonnen, ein Ājīvaka-Asket, der fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.293:1.2": "Welche fünf? ",
-  "an5.293:1.3": "Er tötet lebende Geschöpfe, stiehlt, hat Geschlechtsverkehr, lügt und trinkt Alkohol, der nachlässig macht. ",
+  "an5.293:1.3": "Er tötet lebende Geschöpfe, stiehlt, hat Geschlechtsverkehr, lügt und trinkt Rauschmittel wie Bier, Wein und Branntwein. ",
   "an5.293:1.4": "Ein Ājīvaka-Asket, der diese fünf Eigenschaften besitzt, wird in die Hölle gestoßen.“ "
 }
