--- a/translation/de/sabbamitta/sutta/an/an5/an5.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.47_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an5.47:2.3": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
   "an5.47:2.4": "Das nennt man Reichtum an Vertrauen. ",
   "an5.47:3.1": "Und was ist Reichtum an sittlichem Verhalten? ",
-  "an5.47:3.2": "Da tötet ein edler Schüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. ",
+  "an5.47:3.2": "Da tötet ein edler Schüler keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keine Rauschmittel wie Bier, Wein und Branntwein. ",
   "an5.47:3.3": "Das nennt man Reichtum an sittlichem Verhalten. ",
   "an5.47:4.1": "Und was ist Reichtum an Gelehrsamkeit? ",
   "an5.47:4.2": "Da ist ein edler Schüler sehr gelehrt, erinnert und behält, was er gehört hat: diese Lehren, die am Anfang gut, in der Mitte gut und am Ende gut sind, bedeutsam und gut ausgedrückt; die ein geistliches Leben beschreiben, das ganz vollständig und rein ist. Er ist sehr gelehrt in diesen Lehren, erinnert sie, festigt sie, indem er sie aufsagt, prüft sie mit dem Geist und erfasst sie gedanklich. ",
