--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti70:4.2": "",
   "iti70:5.1": "Dirigendo la mente in modo sbagliato, ",
   "iti70:5.2": "proferendo parole in modo sbagliato, ",
-  "iti70:5.3": "compiendo azioni sbagliate ",
+  "iti70:5.3": "compiendo azioni corporali sbagliate ",
   "iti70:5.4": "con il corpo, qui/in questo mondo, una persona ",
   "iti70:6.1": "ignorante compie cattive azioni ",
   "iti70:6.2": "in questa piccola/insignificante vita ",
