--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti70:5.1": "Dirigendo la mente in modo sbagliato, ",
   "iti70:5.2": "proferendo parole in modo sbagliato, ",
   "iti70:5.3": "compiendo azioni corporali sbagliate, ",
-  "iti70:5.4": "con il corpo, qui/in questo mondo, una persona ",
+  "iti70:5.4": "in questo caso la persona ",
   "iti70:6.1": "ignorante compie cattive azioni ",
   "iti70:6.2": "in questa piccola/insignificante vita ",
   "iti70:6.3": "x ",
