--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -486,7 +486,7 @@
   "dn33:2.1.22": "Fünf höhere Fesseln: ",
   "dn33:2.1.23": "Verlangen nach Wiedergeburt im Bereich der leuchtenden Form, Verlangen nach Wiedergeburt im formlosen Bereich, Einbildung, Rastlosigkeit und Unwissenheit. ",
   "dn33:2.1.24": "Fünf Regeln: ",
-  "dn33:2.1.25": "Man unterlässt es, lebende Geschöpfe zu töten, zu stehlen, sexuelle Verfehlungen zu begehen, zu lügen und Alkohol zu trinken, der nachlässig macht. ",
+  "dn33:2.1.25": "Man unterlässt es, lebende Geschöpfe zu töten, zu stehlen, sexuelle Verfehlungen zu begehen, zu lügen und Rauschmittel wie Bier, Wein und Branntwein zu trinken. ",
   "dn33:2.1.26": "Fünf Dinge, die nicht geschehen können: ",
   "dn33:2.1.27": "Ein Mönch, dessen Befleckungen aufgelöst sind, kann nicht absichtlich einem lebenden Geschöpf das Leben nehmen, etwas wegnehmen in der Absicht, zu stehlen, Geschlechtsverkehr haben, eine bewusste Lüge sprechen oder zum eigenen Vergnügen Vorräte anlegen, wie er es früher als Laien tat. ",
   "dn33:2.1.28": "Fünf Verluste: ",
