--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti75:3.1": "E com’è la persona come una nube che non piove da nessuna parte? ",
   "iti75:3.2": "Qui una certa persona è una che non offre doni a nessuno. Ne’ cibo, ne’ bevande, vestiti, veicoli/trasporto, ghirlande, profumi, unguenti, letti, alloggi, o luce. Ne’ ad asceti, ne’ a brahmani, poveri/accattoni, pellegrini, straccioni, o a mendicanti. ",
   "iti75:4.1": "E com’è la persona come una nube che piove solo da una parte? ",
-  "iti75:4.2": "Qui una certa persona è una che offre doni ad alcuni, ma non ad altri. ",
+  "iti75:4.2": "In questo caso una certa persona è una che offre doni ad alcuni, ma non ad altri. ",
   "iti75:5.1": "E com’è la persona come una nube che piove ovunque? ",
   "iti75:5.2": "Qui una certa persona è una che offre doni a tutti. ",
   "iti75:6.1": "Colui che non da ne’ a contemplativi, ne’ a brahmini, ",
