--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti75:4.1": "E com’è la persona come una nube che piove solo da una parte? ",
   "iti75:4.2": "In questo caso una certa persona è una che offre doni ad alcuni, ma non ad altri. ",
   "iti75:5.1": "E com’è la persona come una nube che piove ovunque? ",
-  "iti75:5.2": "Qui una certa persona è una che offre doni a tutti. ",
+  "iti75:5.2": "In questo caso una certa persona è una che offre doni a tutti. ",
   "iti75:6.1": "Colui che non da ne’ a contemplativi, ne’ a brahmini, ",
   "iti75:6.2": "ne’ a poveri/accattoni, pellegrini o straccioni, ",
   "iti75:6.3": "quel che ha ricevuto (gli è stato dato) [--> le sue provviste di cibo e bevande] ",
