--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti75:2.1": "Questi tre tipi di persone si trovano nel mondo. ",
   "iti75:2.3": "Una è come una nube che non piove da nessuna parte, una è come una nube che piove solo da una parte, una è come una nube che piove ovunque. [[[Una è come una nube che non produce precipitazioni, una è come una nube che scarica/fa acqua solo in alcuni luoghi, e un’altra è come una nube portatrice di pioggia ovunque.]] ",
   "iti75:3.1": "E com’è la persona come una nube che non piove da nessuna parte? ",
-  "iti75:3.2": "In questo caso una certa persona è una che non offre doni a nessuno. Ne’ cibo, ne’ bevande, vestiti, veicoli/trasporto, ghirlande, profumi, unguenti, letti, alloggi, o luce. Ne’ ad asceti, ne’ a brahmani, poveri/accattoni, pellegrini, straccioni, o a mendicanti. ",
+  "iti75:3.2": "Quando una certa persona non offre doni a nessuno: né cibo, né bevande, né vestiti, né veicoli/trasporto, né ghirlande, né profumi, né unguenti, né letti, né alloggi, né luce. Né ad asceti, né a brahmani, né a poveri/accattoni, né a pellegrini, né a straccioni, né a mendicanti. ",
   "iti75:4.1": "E com’è la persona come una nube che piove solo da una parte? ",
   "iti75:4.2": "In questo caso una certa persona è una che offre doni ad alcuni, ma non ad altri. ",
   "iti75:5.1": "E com’è la persona come una nube che piove ovunque? ",
