--- a/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
@@ -188,7 +188,7 @@
   "dn4:20.7": "Und ich lehre ihn die Hymnen. ",
   "dn4:20.8": "Aṅgaka ist von guter Geburt auf mütterlicher und väterlicher Seite, von reiner Abkunft, unwiderlegbar und einwandfrei in Fragen der Abstammung bis zur siebten väterlichen Generation zurück. ",
   "dn4:20.9": "Und ich kenne seine Mutter und seinen Vater. ",
-  "dn4:20.10": "Aber wenn Aṅgaka lebende Geschöpfe töten, stehlen, Ehebruch begehen, lügen oder Alkohol trinken würde, was würden ihm dann sein Aussehen, seine Hymnen oder seine Geburt nützen? ",
+  "dn4:20.10": "Aber wenn Aṅgaka lebende Geschöpfe töten, stehlen, Ehebruch begehen, lügen oder Branntwein trinken würde, was würden ihm dann sein Aussehen, seine Hymnen oder seine Geburt nützen? ",
   "dn4:20.11": "Wenn ein Brahmane sittlich ist, im sittlichen Verhalten zur Reife gekommen, ",
   "dn4:20.12": "und wenn er klug und verständig ist, der erste oder zweite, der die Opfer-Schöpfkelle hält: ",
   "dn4:20.13": "Diese beiden Faktoren muss ein Brahmane besitzen, damit die Brahmanen ihn zu Recht als einen Brahmanen beschreiben.“ ",
