--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti75:4.2": "È quando offre doni ad alcuni, ma non ad altri. ",
   "iti75:5.1": "E com’è la persona come una nube che piove ovunque? ",
   "iti75:5.2": "È quando offre doni a tutti. ",
-  "iti75:6.1": "Chi non dà né a contemplativi, né a brahmani, ",
+  "iti75:6.1": "Chi non dà né ad asceti né a brahmani, ",
   "iti75:6.2": "né a poveri/accattoni, pellegrini o straccioni, ",
   "iti75:6.3": "quel che ha ricevuto (gli è stato dato) [--> le sue provviste di cibo e bevande] ",
   "iti75:6.4": "da mangiare o da bere, ",
