--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp235-255_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp235-255_translation-de-sabbamitta.json
@@ -63,7 +63,7 @@
   "dhp249:3": "Wenn du darüber aufgebracht bist, ",
   "dhp249:4": "über Essen und Trinken anderer, ",
   "dhp249:5": "wirst du weder bei Tag noch bei Nacht ",
-  "dhp249:6": "im Samadhi versinken. ",
+  "dhp249:6": "im Samādhi versinken. ",
   "dhp250:1": "Aber wer dieses abgeschnitten, ",
   "dhp250:2": "es mit der Wurzel ausgegraben und ausgerottet hat, ",
   "dhp250:3": "der wird bei Tag und bei Nacht ",
