--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti75:6.6": "ed è la persona peggiore. ",
   "iti75:7.1": "Chi offre doni ad alcuni ",
   "iti75:7.2": "ma non ad altri, ",
-  "iti75:7.3": "viene chiamata una nube che piove solo da una parte, ",
+  "iti75:7.3": "viene chiamata ‘una nube che piove solo da una parte’, ",
   "iti75:7.4": "dalla gente di buon giudizio. ",
   "iti75:8.1": "La persona che offre con abbondanza, ",
   "iti75:8.2": "che ha compassione per tutte le creature ",
