--- a/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti75_translation-it-soma.json
@@ -23,7 +23,7 @@
   "iti75:8.4": "che dona e parla di donare, ",
   "iti75:9.1": "come una nuvola in una tempesta, ",
   "iti75:9.2": "tuonando, gronda acqua [da tutte le parti] ",
-  "iti75:9.3": "e riempie pieni zeppi d’acqua ",
+  "iti75:9.3": "e riempie pieni zeppi d’acqua, ",
   "iti75:9.4": "altipiani e valli ",
   "iti75:10.1": "allo stesso modo una ",
   "iti75:10.2": "persona di quel tipo, ",
