--- a/translation/it/soma/sutta/kn/iti/vagga8/iti77_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti77_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti77:2.1": "Cercatori, il corpo è transitorio, la coscienza è soggetta a dissiparsi (sbiadire), e tutto ciò che ci appartiene è impermanente, insoddisfacente, e ha la natura di cambiare. ",
   "iti77:3.1": "Chi conosce il corpo come transitorio, ",
-  "iti77:3.2": "la coscienza come soggetta a sbiadire, ",
+  "iti77:3.2": "la coscienza come soggetta a dissiparsi, ",
   "iti77:3.3": "e vede il pericolo delle acquisizioni, ",
   "iti77:3.4": "va oltre la nascita e la morte. ",
   "iti77:3.5": "Ottenuta la pace più alta, ",
