--- a/translation/it/soma/sutta/kn/iti/vagga8/iti77_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti77_translation-it-soma.json
@@ -4,6 +4,6 @@
   "iti77:3.2": "la coscienza come soggetta a dissiparsi, ",
   "iti77:3.3": "e vede il pericolo delle acquisizioni, ",
   "iti77:3.4": "va oltre la nascita e la morte. ",
-  "iti77:3.5": "Ottenuta la pace più alta, ",
+  "iti77:3.5": "Ottenuta la pace/placidità più alta, ",
   "iti77:3.6": "ben evoluto, aspetta il suo tempo. "
 }
