--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -16,7 +16,7 @@
   "iti78:7.3": "Per quello si dovrebbero evitare ",
   "iti78:7.4": "indolenza e debolezza. ",
   "iti78:8.1": "In solitudine come gli Arahant, ",
-  "iti78:8.2": "resoluto come i praticanti del Jhāna, ",
+  "iti78:8.2": "resoluti come i praticanti del Jhāna, ",
   "iti78:8.3": "sempre strenuo, ",
   "iti78:8.4": "si dovrebbe vivere insieme ai saggi. "
 }
