--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti78:3.3": "",
   "iti78:4.1": "così faranno in futuro ",
   "iti78:5.1": "e così fanno nel presente: confluiscono e si uniscono con altre creature per via di un elemento. ",
-  "iti78:6.1": "Il desiderio nasce dall’associazione ",
+  "iti78:6.1": "La smania nasce dall’associazione ",
   "iti78:6.2": "ma è falciato dalla non associazione. ",
   "iti78:6.3": "Come una persona (che si reggesse) su un piccolo tronco ",
   "iti78:6.4": "nel grande oceano, sprofonderebbe, ",
