--- a/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti79:2.1": "Cercatori, queste tre cose portano al declino il cercatore ancora in addestramento. ",
+  "iti79:2.2": "Quali tre? ",
   "iti79:2.3": "Qui un cercatore ancora in addestramento trova piacere e delizia nell’attività, ed è attaccato all’attività. ",
   "iti79:2.4": "Trova piacere e delizia nel parlare, ed è attaccato al parlare. ",
   "iti79:2.5": "Trova piacere e delizia nel dormire, ed è attaccato al dormire. ",
