--- a/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti79:2.3": "Quando un cercatore ancora in addestramento trova piacere e delizia nell’attività, ed è attaccato all’attività. ",
   "iti79:2.4": "Trova piacere e delizia nel parlare, ed è attaccato al parlare. ",
   "iti79:2.5": "Trova piacere e delizia nel dormire, ed è attaccato al dormire. ",
-  "iti79:3.1": "Queste tre cose portano al non-declino il cercatore ancora in addestramento. ",
+  "iti79:3.1": "Queste tre cose portano il cercatore ancora in addestramento verso il non declino. ",
   "iti79:3.2": "Quali tre? ",
   "iti79:3.3": "\n",
   "iti79:3.4": "\n",
