--- a/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti79:2.5": "Trova piacere e delizia nel dormire, ed è attaccato al dormire. ",
   "iti79:3.1": "Queste tre cose portano il cercatore ancora in addestramento verso il non declino. ",
   "iti79:3.2": "Quali tre? ",
-  "iti79:3.3": "Quando un cercatore ancora in addestramento non trova piacere e delizia nell’attività, e non è attaccato all’attività. ",
+  "iti79:3.3": "Quando un cercatore ancora in addestramento non trova piacere e delizia nell’attività e non è attaccato all’attività. ",
   "iti79:3.4": "Non trova piacere e delizia nel parlare, e non è attaccato al parlare. ",
   "iti79:3.5": "Non trova piacere e delizia nel dormire, e non è attaccato al dormire. ",
   "iti79:4.1": "Piacere nel fare, nel parlare, ",
