--- a/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti79:3.2": "Quali tre? ",
   "iti79:3.3": "Quando un cercatore ancora in addestramento non trova piacere e delizia nell’attività e non è attaccato all’attività. ",
   "iti79:3.4": "Non trova piacere e delizia nel parlare e non è attaccato al parlare. ",
-  "iti79:3.5": "Non trova piacere e delizia nel dormire, e non è attaccato al dormire. ",
+  "iti79:3.5": "Non trova piacere e delizia nel dormire e non è attaccato al dormire. ",
   "iti79:4.1": "Piacere nel fare, nel parlare, ",
   "iti79:4.2": "e nel dormire, agitato ",
   "iti79:4.3": "questo cercatore è incapace ",
