--- a/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti79:3.4": "Non trova piacere e delizia nel parlare e non è attaccato al parlare. ",
   "iti79:3.5": "Non trova piacere e delizia nel dormire e non è attaccato al dormire. ",
   "iti79:4.1": "Piacere nel fare, nel parlare ",
-  "iti79:4.2": "e nel dormire, agitato ",
+  "iti79:4.2": "e nel dormire, agitato, ",
   "iti79:4.3": "questo cercatore è incapace ",
   "iti79:4.4": "di ottenere la suprema illuminazione. ",
   "iti79:5.1": "a chi ha poche cose da fare ",
