--- a/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti79_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti79:4.3": "questo cercatore è incapace ",
   "iti79:4.4": "di ottenere la suprema illuminazione. ",
   "iti79:5.1": "A chi ha poche cose da fare ",
-  "iti79:5.2": "poco sonnolente, non agitato, ",
+  "iti79:5.2": "è poco sonnolente, non agitato, ",
   "iti79:5.3": "questo tipo di cercatore è capace ",
   "iti79:5.4": "di ottenere la suprema illuminazione. "
 }
