--- a/translation/it/soma/sutta/kn/iti/vagga9/iti80_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti80_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti80:2.2": "Quali tre? ",
   "iti80:2.3": "La paura di essere mancati di rispetto; il voler ottenere guadagno, onore e fama (ammirazione, e popolarità); il provare pietà verso gli altri. ",
   "iti80:3.1": "Chi è soggiogato dalla paura di essere mancato di rispetto* ",
-  "iti80:3.2": "dà peso a guadagno, onore e gloria (ammirazione, e popolarità), ",
+  "iti80:3.2": "dà peso a guadagno, onore e gloria (guadagno, ammirazione, e popolarità), ",
   "iti80:3.3": "e si diletta in compagnia (e ama stare in compagnia, ) ",
   "iti80:3.4": "è molto lontano dalla distruzione delle catene. ",
   "iti80:4.1": "Chi lascia alle spalle figli e gregge, ",
