--- a/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti81:2.1": "Cercatori, ho visto con i miei occhi che le creature con il cuore sopraffatto e ossessionato dall’onore, dal disonore e da entrambi, dopo la morte, quando il corpo perisce, rinascono in uno stato di perdizione*, di sventura*, di dannazione*, all’inferno. ",
   "iti81:3.1": "",
-  "iti81:4.1": "...sia dagli elogi e che dal non essere elogiate... ",
+  "iti81:4.1": "",
   "iti81:5.1": "xx ",
   "iti81:5.2": "xx ",
   "iti81:9.1": "Sia che uno venga elogiato ",
